[gd_scene load_steps=15 format=2]

[ext_resource path="res://Textures/bg.png" type="Texture" id=1]
[ext_resource path="res://Scripts/info/info.gd" type="Script" id=2]
[ext_resource path="res://Music/Music3.ogg" type="AudioStream" id=3]
[ext_resource path="res://Textures/restart.png" type="Texture" id=4]
[ext_resource path="res://Font/pixeled/Pixeled.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Textures/Black.png" type="Texture" id=6]
[ext_resource path="res://Escenas/SFX/SFX.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 11
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="info" type="Node2D"]
script = ExtResource( 2 )

[node name="fondo" type="Sprite" parent="."]
position = Vector2( 1488, -248 )
scale = Vector2( 6.58333, 6.58333 )
texture = ExtResource( 1 )

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="back" type="TouchScreenButton" parent="."]
scale = Vector2( 2, 2 )
normal = ExtResource( 4 )
shape = SubResource( 1 )

[node name="Credits" type="Node" parent="."]

[node name="Label" type="Label" parent="Credits"]
margin_top = 56.0
margin_right = 40.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpecialThanksto" type="Label" parent="Credits"]
margin_left = 256.0
margin_top = 66.0
margin_right = 512.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 2 )
text = "Special Thanks to"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Araceli" type="Label" parent="Credits/SpecialThanksto"]
margin_top = 46.0
margin_right = 256.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 3 )
text = "Araceli (Correction and Ideas)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Eduardo" type="Label" parent="Credits/SpecialThanksto"]
margin_top = 70.0
margin_right = 256.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 3 )
text = "Eduardo (Main Idea)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BetaTesters" type="Label" parent="Credits"]
margin_left = 256.0
margin_top = 160.0
margin_right = 512.0
margin_bottom = 227.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 2 )
text = "Beta Testers"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="allbt" type="Label" parent="Credits/BetaTesters"]
margin_top = 40.0
margin_right = 256.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 3 )
text = "Tomas - Araceli - Can202"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Me" type="Label" parent="Credits"]
margin_left = 16.0
margin_top = 72.0
margin_right = 221.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 4 )
text = "Programming, 
pixel art, music,
fx and Design"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="me" type="Label" parent="Credits/Me"]
margin_top = 97.0
margin_right = 256.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 3 )
text = "Can202 (me)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="Credits"]
margin_left = 192.0
margin_right = 320.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="programs" type="Label" parent="Credits"]
margin_left = 16.0
margin_top = 204.0
margin_right = 272.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 5 )
text = "Pixel Art Editor:  Pixelorama
Music and Fx: Lmms - Audacity
Design: Krita"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="programs2" type="Label" parent="Credits"]
margin_left = 256.0
margin_top = 223.0
margin_right = 492.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 5 )
text = "Font: pixeled
Engine: Godot Engine"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CL" type="CanvasLayer" parent="."]

[node name="black" type="Sprite" parent="CL"]
visible = false
position = Vector2( 264.298, 146.165 )
scale = Vector2( 9.25932, 5.56766 )
texture = ExtResource( 6 )

[node name="start" type="AnimationPlayer" parent="CL/black"]
anims/anim = SubResource( 6 )

[node name="end" type="AnimationPlayer" parent="CL/black"]
anims/anim = SubResource( 7 )

[node name="SFX" parent="." instance=ExtResource( 7 )]
[connection signal="finished" from="music" to="." method="_on_music_finished"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="animation_finished" from="CL/black/end" to="." method="_on_end_animation_finished"]
